cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(WKserial)

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR} CACHE PATH "Default prefix of install directories" FORCE)
endif()

list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake )

if(CMAKE_COMPILER_IS_GNUCC)
   list(APPEND CMAKE_CXX_FLAGS "-fPIC" )
   list(APPEND CMAKE_LD_FLAGS "-fPIC" )
endif()

set(CMAKE_SKIP_BUILD_RPATH FALSE)
set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

add_subdirectory(source)
