FIND_PACKAGE(ROOT REQUIRED)

INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(${ROOT_INCLUDE_DIR})

AUX_SOURCE_DIRECTORY(src OBJECT_SRC)


SET(LIB_DICT_CXX ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.cxx)
SET(LIB_DICT_PCM ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}_rdict.pcm)


ROOT_GENERATE_DICTIONARY(${PROJECT_NAME}  WKserial.hh)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${OBJECT_SRC} ${LIB_DICT_CXX})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ROOT_LIBRARIES})

install(
  TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )


# IF(found_root_major_vers GREATER 5)
INSTALL(
  FILES ${LIB_DICT_PCM}
  DESTINATION lib
  )
# ENDIF(found_root_major_vers GREATER 5)
