FIND_PACKAGE(ROOT REQUIRED)
INCLUDE_DIRECTORIES(${ROOT_INCLUDE_DIR})

INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(src OBJECT_SRC)

SET(LIB_DICT_NAME lib${PROJECT_NAME})
SET(LIB_DICT_CXX ${CMAKE_CURRENT_BINARY_DIR}/${LIB_DICT_NAME}.cxx)
SET(LIB_DICT_PCM ${CMAKE_CURRENT_BINARY_DIR}/${LIB_DICT_NAME}_rdict.pcm)


ROOT_GENERATE_DICTIONARY(${LIB_DICT_NAME}  WKserial.hh)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${OBJECT_SRC} ${LIB_DICT_CXX})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ROOT_LIBRARIES})

install(
  TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )

if(EXISTS "${LIB_DICT_PCM}")
install(
  FILES ${LIB_DICT_PCM}
  DESTINATION lib
  )
endif()
