GET_FILENAME_COMPONENT(LIB_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
INCLUDE_DIRECTORIES(./)
AUX_SOURCE_DIRECTORY(./ LIB_SRC)
ADD_LIBRARY(${LIB_NAME} SHARED ${LIB_SRC})
TARGET_LINK_LIBRARIES(${LIB_NAME}  ${PROJECT_NAME})


INSTALL(TARGETS ${LIB_NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )
