LIST(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
FIND_PACKAGE(ROOT REQUIRED)
INCLUDE(${ROOT_USE_FILE})

GET_FILENAME_COMPONENT(DEV_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
SET(LIB_NAME WK${DEV_NAME})


INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(src OBJECT_SRC)


SET(LIB_DICT_NAME ROOT${LIB_NAME})
SET(LIB_DICT_CXX ${CMAKE_CURRENT_BINARY_DIR}/${LIB_DICT_NAME}.cxx)
SET(LIB_DICT_PCM ${CMAKE_CURRENT_BINARY_DIR}/lib${LIB_DICT_NAME}_rdict.pcm)
SET(LIB_DICT_MAP ${CMAKE_CURRENT_BINARY_DIR}/lib${LIB_DICT_NAME}.rootmap)

ROOT_GENERATE_DICTIONARY(${LIB_DICT_NAME} include/CameraIR.hh include/NanotecMotor.hh include/WKThermalChamber.hh LINKDEF include/LinkDef.hh)
ADD_LIBRARY(${LIB_NAME} SHARED ${OBJECT_SRC} ${LIB_DICT_CXX})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${PROJECT_NAME} ${ROOT_LIBRARIES} stdc++fs)

INSTALL(
  TARGETS ${LIB_NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )

IF(${ROOT_VERSION_MAJOR} GREATER 5)
  INSTALL(
  FILES ${LIB_DICT_PCM} ${LIB_DICT_MAP} 
  DESTINATION lib
  )
endif()


SET(RL_NAME "rlthermal")
SET(RL_SRC src_exe/rlthermal.cc)
ADD_EXECUTABLE(${RL_NAME} ${RL_SRC})
TARGET_LINK_LIBRARIES(${RL_NAME} ${LIB_NAME} readline)
INSTALL(TARGETS ${RL_NAME} RUNTIME DESTINATION bin)
