GET_FILENAME_COMPONENT(DEV_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
SET(LIB_NAME WK${DEV_NAME})

INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(src OBJECT_SRC)


ADD_LIBRARY(${LIB_NAME} SHARED ${OBJECT_SRC})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${PROJECT_NAME} stdc++fs)

INSTALL(
  TARGETS ${LIB_NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )

SET(RL_NAME "rlthermal")
SET(RL_SRC src_exe/rlthermal.cc)
ADD_EXECUTABLE(${RL_NAME} ${RL_SRC})
TARGET_LINK_LIBRARIES(${RL_NAME} ${LIB_NAME} readline)
INSTALL(TARGETS ${RL_NAME} RUNTIME DESTINATION bin)
